[package]
name = "dyneval"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
unsafe_eval = []

[dependencies.dyneval_derive]
path = "dyneval_derive"

[dependencies.smallvec]
version = "1.8.0"
features = ["const_generics"]

[dependencies.libc]
version = "0.2.119"