[package]
name = "dyneval"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.dyneval_derive]
path = "dyneval_derive"

[dependencies.smallvec]
version = "1.8.0"
features = ["const_generics"]

[dependencies.nom]
version = "7.1.1"

[profile.dev]
incremental = true

[profile.release]
incremental = true