[package]
name = "dyneval"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.dyneval_derive]
path = "dyneval_derive"

[dependencies.smallvec]
version = "1.8.0"
features = ["const_generics"]

[profile.dev]
incremental = true

[profile.release]
incremental = true

[profile.bench]
codegen-units = 1
opt-level = 3
overflow-checks = false
lto = "fat"